[core] upgrade to java21, gradle 8.4, bump deps